add payment flow